@@ -1,3 +1,6 @@
+26-December-2011 Michael Babker
+~ Improvements to podcastManagerBuildRoute
+
 23-December-2011 Michael Babker
 ! Raise minimum version to Joomla! 2.5
 + Add Finder plugin for feeds
